--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,6 @@ server {
 
   # node api reverse proxy
   location /api/ {
-    proxy_pass http://localhost:3000/;
+    proxy_pass http://13.233.244.205:3000/;
   }
 }
