--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,14 @@ server {
 
   # node api reverse proxy
   location /api/ {
-    proxy_pass http://nodebff-env-1.eba-pn2xek6t.ap-south-1.elasticbeanstalk.com/;
+    proxy_pass http://nodebff-env-1.eba-pn2xek6t.ap-south-1.elasticbeanstalk.com/user;
+  }
+
+  location / {
+    proxy_pass http://nodebff-env-1.eba-pn2xek6t.ap-south-1.elasticbeanstalk.com/user;
+  }
+
+  location /api/user {
+    proxy_pass http://nodebff-env-1.eba-pn2xek6t.ap-south-1.elasticbeanstalk.com/user;
   }
 }
